--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,17 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Polyfills -->
+  <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
+
+  <script src="https://unpkg.com/zone.js@0.7.4?main=browser"></script>
+  <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
+
+  <!--<script src="node_modules/systemjs/dist/system.src.js"></script>-->
+  <script src="systemjs.config.js"></script>
 </head>
 <body>
   <app-root></app-root>
