Setting up for deployment.

--- a/src/index-local.html
+++ b/src/index-local.html
@@ -16,15 +16,9 @@
   <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
 
   <!--<script src="node_modules/systemjs/dist/system.src.js"></script>-->
-  <script src="systemjs.config.server.js"></script>
-
-  <script>
-      System.import('main.js')
-            .catch(function(err){ console.error(err); });
-    </script>
-
+  <script src="systemjs.config.js"></script>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 </html>
